@@ -57,6 +57,10 @@
 - New function filter: compute an ARMA-like filtering of a
   series
 - Add a GUI language selector (by popular request)
+- "restrict" command: accept scalar variables in place of
+  numerical constants
+- "genr" with lists: allow boolean comparison of a list to a
+  scalar, returning a series
 
 1/23/2009 version 1.8.0
 - Fix bug: crash in "Add random variable" dialog
